// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBox Component should allow custom checked Icon 1`] = `
<TouchableOpacity
  accessibilityRole="checkbox"
  accessibilityState={
    Object {
      "checked": true,
    }
  }
  activeOpacity={0.2}
  checkedIcon={
    <Image
      source={
        Object {
          "uri": "https://image.ibb.co/jcY95H/checked.png",
        }
      }
      style={
        Object {
          "height": 30,
          "width": 30,
        }
      }
    />
  }
  size={24}
  style={
    Object {
      "margin": 5,
      "marginLeft": 10,
      "marginRight": 10,
      "padding": 10,
    }
  }
  testID="checkbox"
  uncheckedColor="#bfbfbf"
  uncheckedIcon={
    <Image
      source={
        Object {
          "uri": "https://image.ibb.co/fda0Cx/no_check.png",
        }
      }
      style={
        Object {
          "height": 30,
          "width": 30,
        }
      }
    />
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <CheckBoxIcon
      Component={[Function]}
      center={false}
      checked={true}
      checkedColor="#2089dc"
      checkedIcon={
        <Image
          source={
            Object {
              "uri": "https://image.ibb.co/jcY95H/checked.png",
            }
          }
          style={
            Object {
              "height": 30,
              "width": 30,
            }
          }
        />
      }
      iconRight={false}
      right={false}
      size={24}
      theme={
        Object {
          "colors": Object {
            "disabled": "hsl(208, 8%, 90%)",
            "divider": "#bcbbc1",
            "error": "#ff190c",
            "grey0": "#393e42",
            "grey1": "#43484d",
            "grey2": "#5e6977",
            "grey3": "#86939e",
            "grey4": "#bdc6cf",
            "grey5": "#e1e8ee",
            "greyOutline": "#bbb",
            "platform": Object {
              "android": Object {
                "error": "#f44336",
                "primary": "#2196f3",
                "secondary": "#9C27B0",
                "success": "#4caf50",
                "warning": "#ffeb3b",
              },
              "ios": Object {
                "error": "#ff3b30",
                "primary": "#007aff",
                "secondary": "#5856d6",
                "success": "#4cd964",
                "warning": "#ffcc00",
              },
            },
            "primary": "#2089dc",
            "searchBg": "#303337",
            "secondary": "#8F0CE8",
            "success": "#52c41a",
            "warning": "#faad14",
          },
        }
      }
      titleProps={Object {}}
      uncheckedColor="#bfbfbf"
      uncheckedIcon={
        <Image
          source={
            Object {
              "uri": "https://image.ibb.co/fda0Cx/no_check.png",
            }
          }
          style={
            Object {
              "height": 30,
              "width": 30,
            }
          }
        />
      }
    />
    <Themed.Text
      style={
        Object {
          "color": "#43484d",
          "fontWeight": "bold",
          "marginLeft": 10,
          "marginRight": 10,
        }
      }
      testID="checkboxTitle"
    />
  </View>
</TouchableOpacity>
`;

exports[`CheckBox Component should allow custom checked Icon when unchecked 1`] = `
<TouchableOpacity
  accessibilityRole="checkbox"
  accessibilityState={
    Object {
      "checked": false,
    }
  }
  activeOpacity={0.2}
  checkedIcon={
    <Image
      source={
        Object {
          "uri": "https://image.ibb.co/jcY95H/checked.png",
        }
      }
      style={
        Object {
          "height": 30,
          "width": 30,
        }
      }
    />
  }
  size={24}
  style={
    Object {
      "margin": 5,
      "marginLeft": 10,
      "marginRight": 10,
      "padding": 10,
    }
  }
  testID="checkbox"
  uncheckedColor="#bfbfbf"
  uncheckedIcon={
    <Image
      source={
        Object {
          "uri": "https://image.ibb.co/fda0Cx/no_check.png",
        }
      }
      style={
        Object {
          "height": 30,
          "width": 30,
        }
      }
    />
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <CheckBoxIcon
      Component={[Function]}
      center={false}
      checked={false}
      checkedColor="#2089dc"
      checkedIcon={
        <Image
          source={
            Object {
              "uri": "https://image.ibb.co/jcY95H/checked.png",
            }
          }
          style={
            Object {
              "height": 30,
              "width": 30,
            }
          }
        />
      }
      iconRight={false}
      right={false}
      size={24}
      theme={
        Object {
          "colors": Object {
            "disabled": "hsl(208, 8%, 90%)",
            "divider": "#bcbbc1",
            "error": "#ff190c",
            "grey0": "#393e42",
            "grey1": "#43484d",
            "grey2": "#5e6977",
            "grey3": "#86939e",
            "grey4": "#bdc6cf",
            "grey5": "#e1e8ee",
            "greyOutline": "#bbb",
            "platform": Object {
              "android": Object {
                "error": "#f44336",
                "primary": "#2196f3",
                "secondary": "#9C27B0",
                "success": "#4caf50",
                "warning": "#ffeb3b",
              },
              "ios": Object {
                "error": "#ff3b30",
                "primary": "#007aff",
                "secondary": "#5856d6",
                "success": "#4cd964",
                "warning": "#ffcc00",
              },
            },
            "primary": "#2089dc",
            "searchBg": "#303337",
            "secondary": "#8F0CE8",
            "success": "#52c41a",
            "warning": "#faad14",
          },
        }
      }
      titleProps={Object {}}
      uncheckedColor="#bfbfbf"
      uncheckedIcon={
        <Image
          source={
            Object {
              "uri": "https://image.ibb.co/fda0Cx/no_check.png",
            }
          }
          style={
            Object {
              "height": 30,
              "width": 30,
            }
          }
        />
      }
    />
    <Themed.Text
      style={
        Object {
          "color": "#43484d",
          "fontWeight": "bold",
          "marginLeft": 10,
          "marginRight": 10,
        }
      }
      testID="checkboxTitle"
    />
  </View>
</TouchableOpacity>
`;

exports[`CheckBox Component should allow passing props to the title 1`] = `
<TouchableOpacity
  accessibilityRole="checkbox"
  accessibilityState={
    Object {
      "checked": true,
    }
  }
  activeOpacity={0.2}
  checkedIcon="check-square-o"
  size={24}
  style={
    Object {
      "backgroundColor": "#fafafa",
      "borderColor": "#ededed",
      "borderRadius": 3,
      "borderWidth": 1,
      "margin": 5,
      "marginLeft": 10,
      "marginRight": 10,
      "padding": 10,
    }
  }
  testID="checkbox"
  uncheckedColor="#bfbfbf"
  uncheckedIcon="square-o"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <CheckBoxIcon
      Component={[Function]}
      center={false}
      checked={true}
      checkedColor="#2089dc"
      checkedIcon="check-square-o"
      iconRight={false}
      right={false}
      size={24}
      theme={
        Object {
          "colors": Object {
            "disabled": "hsl(208, 8%, 90%)",
            "divider": "#bcbbc1",
            "error": "#ff190c",
            "grey0": "#393e42",
            "grey1": "#43484d",
            "grey2": "#5e6977",
            "grey3": "#86939e",
            "grey4": "#bdc6cf",
            "grey5": "#e1e8ee",
            "greyOutline": "#bbb",
            "platform": Object {
              "android": Object {
                "error": "#f44336",
                "primary": "#2196f3",
                "secondary": "#9C27B0",
                "success": "#4caf50",
                "warning": "#ffeb3b",
              },
              "ios": Object {
                "error": "#ff3b30",
                "primary": "#007aff",
                "secondary": "#5856d6",
                "success": "#4cd964",
                "warning": "#ffcc00",
              },
            },
            "primary": "#2089dc",
            "searchBg": "#303337",
            "secondary": "#8F0CE8",
            "success": "#52c41a",
            "warning": "#faad14",
          },
        }
      }
      title="Yea"
      titleProps={
        Object {
          "numberOfLines": 2,
        }
      }
      uncheckedColor="#bfbfbf"
      uncheckedIcon="square-o"
    />
    <Themed.Text
      numberOfLines={2}
      style={
        Object {
          "color": "#43484d",
          "fontWeight": "bold",
          "marginLeft": 10,
          "marginRight": 10,
        }
      }
      testID="checkboxTitle"
    >
      Yea
    </Themed.Text>
  </View>
</TouchableOpacity>
`;

exports[`CheckBox Component should render title in Text 1`] = `
<TouchableOpacity
  accessibilityRole="checkbox"
  accessibilityState={
    Object {
      "checked": true,
    }
  }
  activeOpacity={0.2}
  checkedIcon="check-square-o"
  size={24}
  style={
    Object {
      "backgroundColor": "#fafafa",
      "borderColor": "#ededed",
      "borderRadius": 3,
      "borderWidth": 1,
      "margin": 5,
      "marginLeft": 10,
      "marginRight": 10,
      "padding": 10,
    }
  }
  testID="checkbox"
  uncheckedColor="#bfbfbf"
  uncheckedIcon="square-o"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <CheckBoxIcon
      Component={[Function]}
      center={false}
      checked={true}
      checkedColor="#2089dc"
      checkedIcon="check-square-o"
      iconRight={false}
      right={false}
      size={24}
      theme={
        Object {
          "colors": Object {
            "disabled": "hsl(208, 8%, 90%)",
            "divider": "#bcbbc1",
            "error": "#ff190c",
            "grey0": "#393e42",
            "grey1": "#43484d",
            "grey2": "#5e6977",
            "grey3": "#86939e",
            "grey4": "#bdc6cf",
            "grey5": "#e1e8ee",
            "greyOutline": "#bbb",
            "platform": Object {
              "android": Object {
                "error": "#f44336",
                "primary": "#2196f3",
                "secondary": "#9C27B0",
                "success": "#4caf50",
                "warning": "#ffeb3b",
              },
              "ios": Object {
                "error": "#ff3b30",
                "primary": "#007aff",
                "secondary": "#5856d6",
                "success": "#4cd964",
                "warning": "#ffcc00",
              },
            },
            "primary": "#2089dc",
            "searchBg": "#303337",
            "secondary": "#8F0CE8",
            "success": "#52c41a",
            "warning": "#faad14",
          },
        }
      }
      title="Custom Text"
      titleProps={Object {}}
      uncheckedColor="#bfbfbf"
      uncheckedIcon="square-o"
    />
    <Themed.Text
      style={
        Object {
          "color": "#43484d",
          "fontWeight": "bold",
          "marginLeft": 10,
          "marginRight": 10,
        }
      }
      testID="checkboxTitle"
    >
      Custom Text
    </Themed.Text>
  </View>
</TouchableOpacity>
`;

exports[`CheckBox Component should render with icon and checked 1`] = `
<TouchableOpacity
  accessibilityRole="checkbox"
  accessibilityState={
    Object {
      "checked": false,
    }
  }
  activeOpacity={0.2}
  checkedIcon="check-square-o"
  iconType="font-awesome"
  size={24}
  style={
    Object {
      "backgroundColor": "red",
      "margin": 5,
      "marginLeft": 10,
      "marginRight": 10,
      "padding": 10,
    }
  }
  testID="checkbox"
  uncheckedColor="#bfbfbf"
  uncheckedIcon="square-o"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <CheckBoxIcon
      Component={[Function]}
      center={false}
      checked={false}
      checkedColor="red"
      checkedIcon="check-square-o"
      containerStyle={
        Object {
          "backgroundColor": "red",
        }
      }
      iconRight={false}
      iconType="font-awesome"
      right={false}
      size={24}
      theme={
        Object {
          "colors": Object {
            "disabled": "hsl(208, 8%, 90%)",
            "divider": "#bcbbc1",
            "error": "#ff190c",
            "grey0": "#393e42",
            "grey1": "#43484d",
            "grey2": "#5e6977",
            "grey3": "#86939e",
            "grey4": "#bdc6cf",
            "grey5": "#e1e8ee",
            "greyOutline": "#bbb",
            "platform": Object {
              "android": Object {
                "error": "#f44336",
                "primary": "#2196f3",
                "secondary": "#9C27B0",
                "success": "#4caf50",
                "warning": "#ffeb3b",
              },
              "ios": Object {
                "error": "#ff3b30",
                "primary": "#007aff",
                "secondary": "#5856d6",
                "success": "#4cd964",
                "warning": "#ffcc00",
              },
            },
            "primary": "#2089dc",
            "searchBg": "#303337",
            "secondary": "#8F0CE8",
            "success": "#52c41a",
            "warning": "#faad14",
          },
        }
      }
      titleProps={Object {}}
      uncheckedColor="#bfbfbf"
      uncheckedIcon="square-o"
    />
    <Themed.Text
      style={
        Object {
          "color": "#43484d",
          "fontWeight": "bold",
          "marginLeft": 10,
          "marginRight": 10,
        }
      }
      testID="checkboxTitle"
    />
  </View>
</TouchableOpacity>
`;

exports[`CheckBox Component should render with icon and iconRight 1`] = `
<TouchableOpacity
  accessibilityRole="checkbox"
  accessibilityState={
    Object {
      "checked": false,
    }
  }
  activeOpacity={0.2}
  checkedIcon="check-square-o"
  iconType="font-awesome"
  size={24}
  style={
    Object {
      "margin": 5,
      "marginLeft": 10,
      "marginRight": 10,
      "padding": 10,
    }
  }
  testID="checkbox"
  uncheckedColor="blue"
  uncheckedIcon="square-o"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Themed.Text
      style={
        Object {
          "color": "#43484d",
          "fontWeight": "bold",
          "marginLeft": 10,
          "marginRight": 10,
        }
      }
      testID="checkboxTitle"
    />
    <CheckBoxIcon
      Component={[Function]}
      center={true}
      checked={false}
      checkedColor="#2089dc"
      checkedIcon="check-square-o"
      iconRight={true}
      iconType="font-awesome"
      right={true}
      size={24}
      theme={
        Object {
          "colors": Object {
            "disabled": "hsl(208, 8%, 90%)",
            "divider": "#bcbbc1",
            "error": "#ff190c",
            "grey0": "#393e42",
            "grey1": "#43484d",
            "grey2": "#5e6977",
            "grey3": "#86939e",
            "grey4": "#bdc6cf",
            "grey5": "#e1e8ee",
            "greyOutline": "#bbb",
            "platform": Object {
              "android": Object {
                "error": "#f44336",
                "primary": "#2196f3",
                "secondary": "#9C27B0",
                "success": "#4caf50",
                "warning": "#ffeb3b",
              },
              "ios": Object {
                "error": "#ff3b30",
                "primary": "#007aff",
                "secondary": "#5856d6",
                "success": "#4cd964",
                "warning": "#ffcc00",
              },
            },
            "primary": "#2089dc",
            "searchBg": "#303337",
            "secondary": "#8F0CE8",
            "success": "#52c41a",
            "warning": "#faad14",
          },
        }
      }
      titleProps={Object {}}
      uncheckedColor="blue"
      uncheckedIcon="square-o"
    />
  </View>
</TouchableOpacity>
`;

exports[`CheckBox Component should render without issues 1`] = `
<TouchableOpacity
  accessibilityRole="checkbox"
  accessibilityState={
    Object {
      "checked": false,
    }
  }
  activeOpacity={0.2}
  checkedIcon="check-square-o"
  size={24}
  style={
    Object {
      "margin": 5,
      "marginLeft": 10,
      "marginRight": 10,
      "padding": 10,
    }
  }
  testID="checkbox"
  uncheckedColor="#bfbfbf"
  uncheckedIcon="square-o"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <CheckBoxIcon
      Component={[Function]}
      center={false}
      checked={false}
      checkedColor="#2089dc"
      checkedIcon="check-square-o"
      iconRight={false}
      right={false}
      size={24}
      theme={
        Object {
          "colors": Object {
            "disabled": "hsl(208, 8%, 90%)",
            "divider": "#bcbbc1",
            "error": "#ff190c",
            "grey0": "#393e42",
            "grey1": "#43484d",
            "grey2": "#5e6977",
            "grey3": "#86939e",
            "grey4": "#bdc6cf",
            "grey5": "#e1e8ee",
            "greyOutline": "#bbb",
            "platform": Object {
              "android": Object {
                "error": "#f44336",
                "primary": "#2196f3",
                "secondary": "#9C27B0",
                "success": "#4caf50",
                "warning": "#ffeb3b",
              },
              "ios": Object {
                "error": "#ff3b30",
                "primary": "#007aff",
                "secondary": "#5856d6",
                "success": "#4cd964",
                "warning": "#ffcc00",
              },
            },
            "primary": "#2089dc",
            "searchBg": "#303337",
            "secondary": "#8F0CE8",
            "success": "#52c41a",
            "warning": "#faad14",
          },
        }
      }
      titleProps={Object {}}
      uncheckedColor="#bfbfbf"
      uncheckedIcon="square-o"
    />
    <Themed.Text
      style={
        Object {
          "color": "#43484d",
          "fontWeight": "bold",
          "marginLeft": 10,
          "marginRight": 10,
        }
      }
      testID="checkboxTitle"
    />
  </View>
</TouchableOpacity>
`;
